# snake_game

./: Cargo.toml  main.rs  package.json
src/: another_lib.rs  lib.rs
www/: bootstrap.js  index.html  index.ts  notes.txt  package-lock.json  package.json  sum.wasm  tsconfig.json  webpack.config.js
www/server/: 389.bootstrap.js  bootstrap.js  index.html  index.js  webpack.config.js
www/server/utils/: rnd.js
www/utils/: rnd.js
