[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"
[description]
description = "my description"
[license]
description = "byol"
[repository]
repository="https://github.com/DefyGravity/snake_game.git"
[dependencies]
wasm-bindgen = "0.2.99" 
web-sys = {version = "0.3.76", features=["Window"]}
wee_alloc = "0.4.5" 
[lib]
crate-type = ["cdylib"]
